infrastructure/observability-core/victoriametrics/service-default-victoriametrics.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '8428'
    prometheus.io/scrape: 'true'
  labels:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/instance: victoriametrics
    app.kubernetes.io/name: victoriametrics
  name: victoriametrics
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8428
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: victoriametrics
    app.kubernetes.io/name: victoriametrics
  sessionAffinity: None
  type: ClusterIP
