infrastructure/observability-core/victoriametrics/ingressroute-default-victoriametrics.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/instance: victoriametrics
    app.kubernetes.io/name: victoriametrics
  name: victoriametrics
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`victoriametrics.brmartin.co.uk`)
    middlewares: []
    services:
    - name: victoriametrics
      port: http
  tls:
    secretName: wildcard-brmartin-tls
